<resources>
    <string name="app_name">ParkingProject</string>
    <string name="button_send_report">Submit Report </string>
    <string name="display_location">Cal Poly Pomona</string>
    <string name="parking_availability">Parking Availability</string>
    <string name="parking_lot_text">Parking Lot</string>
    <string name="location_text">Location</string>
    <string name="go_to_map">Go to Map</string>
    <string-array name="parking_lots">
        <item>Parking Structure Bld 106</item>
        <item>Lot B</item>
        <item>Lot E1</item>
        <item>Lot E2</item>
        <item>Lot F1</item>
        <item>Lot F3</item>
        <item>Lot F5</item>
        <item>Lot F8</item>
        <item>Lot F9</item>
        <item>Lot F10</item>
        <item>Lot H</item>
        <item>Lot I</item>
        <item>Lot J</item>
        <item>Lot M</item>
        <item>Lot N</item>
        <item>Paved Overflow Lot</item>
        <item>Parking Structure 2</item>
        <item>Lot Q</item>
        <item>Lot R</item>
        <item>Lot U</item>
        <item>Unpaved Overflow Lot</item>
    </string-array>
    <string name="title_activity_google__maps__page">Map</string>
    <string name="go_to_maps_from_graph">Go to Map</string>
    <string name="go_to_report_from_graph">Go to Report</string>
    <string name="empty_radio_button">Empty</string>
    <string name="mostly_empty_radio_button">Mostly Empty</string>
    <string name="mostly_full_radio_button">Mostly Full</string>
    <string name="full_radio_button">Full</string>
    <string name="go_to_graph_from_report">Go to Graph</string>
</resources>
