<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gener_000.parkingproject.MainActivity">

    <TextView
        android:text="@string/location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lo"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:textSize="20sp" />

    <TextView
        android:text="@string/parking_lot_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/parking_lot_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:layout_below="@+id/lo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_marginTop="28dp"
        android:layout_alignTop="@+id/parking_lot_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hapticFeedbackEnabled="true"
        android:visibility="visible"
        style="@style/Widget.AppCompat.Spinner.DropDown" />

    <TextView
        android:text="@string/display_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/display_location"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:layout_above="@+id/parking_lot_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/parking_availability"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/parking_availability"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:layout_marginTop="78dp"
        android:layout_below="@+id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/emptyRadioButton"
        android:layout_above="@+id/button_send_report"
        android:id="@+id/parkingAvailabilityRadioGroup"
        android:addStatesFromChildren="true"
        android:layout_toStartOf="@+id/button_send_report" />
    <RadioButton
        android:text="@string/empty_radio_button"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/emptyRadioButton" />

    <RadioButton
        android:text="@string/full_radio_button"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mostlyFullRadioButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/fullRadioButton" />

    <RadioButton
        android:text="@string/mostly_empty_radio_button"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/mostlyEmptyRadioButton"
        android:layout_below="@+id/emptyRadioButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:text="@string/mostly_full_radio_button"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/mostlyFullRadioButton"
        android:layout_below="@+id/mostlyEmptyRadioButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/go_to_map"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/go_to_map"
        android:onClick="goToMaps"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/emptyRadioButton"
        android:layout_alignEnd="@+id/emptyRadioButton" />

    <Button
        android:text="@string/go_to_graph_from_report"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/go_to_graph_from_report"
        android:layout_alignBaseline="@+id/button_send_report"
        android:layout_alignBottom="@+id/button_send_report"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/button_send_report"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_send_report"
        android:onClick="sendMessage"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
